--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@antv/data-set": "^0.11.8",
+    "@antv/g2": "^5.3.2",
     "@reduxjs/toolkit": "^2.8.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -13,6 +15,7 @@
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
     "antd": "^5.25.0",
+    "bizcharts": "^4.1.23",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
