--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/charts": "^2.3.0",
     "@antv/data-set": "^0.11.8",
     "@antv/g2": "^5.3.2",
     "@reduxjs/toolkit": "^2.8.1",
